--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
             <h1><a href="/">Natalyh&apos;s SWTOR Guides</a></h1>
         </nav>
         <div id="content">
+            <div class="inline-right">
+                <img height="200" src="static/blast.webp" alt="My Main on SF" />
+                <p class="caption">My Main on SF</p>
+            </div>
             <p>Hello everyone! My name is Natalyh (obviously this is not my real name, it&apos;s the name of one of my toons that people started to know me by.) I started playing SWTOR in 2018 as a story noob and then at some point later got into PvP and ranked just in time to experience the end of Season 10 (and somehow stumble my way into a bronze).</p>
             <p>I started playing on Satele Shan during seasons 10, 11, and 12, then during preseason 13 made the transition to Star Forge, where I got my first gold later that season. Like most people who still play at this point, I&apos;ve left and come back to this game a number of times and I like to maintain a presence on all servers, though being a west coast player with shitty wifi makes it very difficult to play on European servers most of the time. I do like to travel though, so you may see me over there if I happen to be on the right side of the world at the time.</p>
             <hr />
             <h2>FAQ</h2>
+            <div class="inline-left vert-margin">
+                <img src="static/serp.webp" width="256" alt="Warlord Serpenus" />
+                <p class="caption">Warlord Serpenus</p>
+            </div>
             <div id="faq-classes" class="faq">
                 <h3>What do you play?</h3>
                 <p>I am primarily a sorcerer main (and sage, it&apos;s literally the same class), mostly because 90% of the reason I enjoy this game is shooting lightning at people. As any ranked player should I have played all classes at a reasonable level in regs, though I would hardly qualify that as experience. In an attempt to diversify my skillset I have also played Mercernary and Sniper in ranked a fair (silver) bit. I find melee classes don&apos;t really fit my playstyle well, but I do dabble with Lethality Operative and Hatred Assassin because I enjoy dot spreading.</p>
