Fixed wonky descriptive texts

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Natalyh" />
-        <meta name="description" content="Assorted SWTOR PvP guides for various classes, by written by Nat." />
-        <meta property="og:description" content="Assorted SWTOR PvP guides for various classes, by written by Nat." />
+        <meta name="description" content="Assorted SWTOR PvP guides for various classes, written by Nat." />
+        <meta property="og:description" content="Assorted SWTOR PvP guides for various classes, written by Nat." />
         <meta property="og:title" content="Natalyh&apos;s SWTOR Guides" />
         <meta property="og:type" content="profile" />
         <meta property="profile:first_name" content="Natalie" />
