--- a/madness.html
+++ b/madness.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Natalyh" />
-        <meta name="description" content="A new player&apos;s guide on how to play the Madness Sorcerer specialization in PvP arenas and warzones for the most recent SWTOR patch." />
-        <meta property="og:description" content="A new player&apos;s guide on how to play the Madness Sorcerer specialization in PvP arenas and warzones for the most recent SWTOR patch." />
+        <meta name="description" content="A new player&apos;s guide for how to play the Madness Sorcerer specialization in PvP arenas and warzones." />
+        <meta property="og:description" content="A new player&apos;s guide for how to play the Madness Sorcerer specialization in PvP arenas and warzones." />
         <meta property="og:title" content="SWTOR 7.2 Madness PvP Guide" />
         <meta property="og:type" content="article" />
         <meta property="article:author" content="https://natalyh.tk/">
