--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Natalyh" />
-        <meta name="description" content="Assorted SWTOR PvP guides for various classes, by written by Nat." />
-        <meta property="og:description" content="Assorted SWTOR PvP guides for various classes, by written by Nat." />
+        <meta name="description" content="Assorted SWTOR PvP guides for various classes, written by Nat." />
+        <meta property="og:description" content="Assorted SWTOR PvP guides for various classes, written by Nat." />
         <meta property="og:title" content="Page Not Found" />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="https://natalyh.tk/static/profile.png" />
