Write some of the defense section

--- a/lightning.html
+++ b/lightning.html
@@ -248,6 +248,48 @@
                         (only with proc)</li>
                     <li><span class="sprite sprite-lightning-bolt">Lightning Bolt</span></li>
                 </ol>
+                <h3>Offensive Cooldowns</h3>
+                <p>You have two offensive cooldowns on sorc, these are
+                    <span class="sprite sprite-recklessness">Recklessness</span>
+                    and
+                    <span class="sprite sprite-polarity-shift">Polarity Shift</span>.</p>
+                <p><span class="sprite sprite-recklessness">Recklessness</span>
+                    will make your next two abilities crit, guaranteed,
+                    but it won&apos;t increase their critical bonus damage like a
+                    normal autocrit would. The exception to this rule, however, is
+                    <span class="sprite sprite-thundering-blast">Thundering Blast</span>.
+                    Since Thundering Blast already autocrits on targets that have your
+                    <span class="sprite sprite-affliction">Affliction</span>
+                    on them, Recklessness will just <strong>increase that damage by
+                    60%</strong>. That is a large number, and it stacks with your other
+                    offensive cooldowns. As a rule of thumb, you want to use
+                    <span class="sprite sprite-recklessness">Recklessness</span>
+                    with the first
+                    <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                    available after it comes off cooldown, and then use one more
+                    hard-hitting ability to consume the second charge. Typically the
+                    second charge will be spent on
+                    <span class="sprite sprite-chain-lightning">Chain Lightning</span> or <span class="sprite sprite-halted-offensive">Halted Offensive</span>
+                    since these do the most damage per activation after Thundering
+                    Blast, but you can also use it with
+                    <span class="sprite sprite-lightning-flash">Lightning Flash</span>
+                    or
+                    <span class="sprite sprite-unnatural-preservation">Unnatural Preservation</span>
+                    depending on your health level and the procs you have available.</p>
+                <p><span class="sprite sprite-polarity-shift">Polarity Shift</span>
+                    does a couple of things. First, literally just increase all your
+                    damage by 20% for 20 seconds. Pretty nice. Second, makes you immune
+                    to being interrupted or having your casts slowed in any way. Very
+                    nice. Third, it increases your alacrity (as in, your cast and GCD
+                    speed) by 20%. Oh and did I forget to mention? It doubles your
+                    movement speed. Just casual. Basically, this is your godmode button.
+                    It can turn the tide of duels, let you kite out enemies so badly
+                    you literally break combat and regen to full, get you kills on
+                    unsuspecting stealthers&hellip; the possibilities are truly endless.
+                    That said, you&apos;ll normally use it in the opener to hit like a
+                    goddamn truck, and after that you can find creative uses for it the
+                    second time it comes up. Push this button off cooldown while
+                    freecasting.</p>
                 <h3 id="chasing">Chasing</h3>
                 <p>When you start investing damage into a target, it&apos;s incredibly
                     important that you do not then allow this target to escape and
@@ -318,8 +360,49 @@
             <hr />
             <section id="defense">
                 <h2>Defense</h2>
+                <h3 id="unnatural-pres"><span class="sprite sprite-unnatural-preservation">Unnatural Preservation</span></h3>
+                <p>Before we even get into the macro-gameplay of surviving on sorc,
+                    let me introduce you to my number one pet peeve when watching other
+                    sorcs play. This is my friend
+                    <span class="sprite sprite-unnatural-preservation">Unnatural Preservation</span>.
+                    What Unnatural Preservation does, is heal you. No strings attached.
+                    It does not cost force, it does not use a GCD, it has a very short
+                    cooldown, and you can even spend
+                    <span class="sprite sprite-recklessness">Recklessness</span>
+                    on it to make it heal more. The sooner you use it, the faster it
+                    comes off cooldown, and the sooner you can use it again. By
+                    delaying this you are literally wasting healing for no reason,
+                    and also causing me to despise you on a personal level. In short,
+                    if you are below 90% health,
+                    <strong>PUSH THIS FUCKING BUTTON IMMEDIATELY</strong>.
+                    Now, with that said&hellip;
+                </p>
+                <h3 id="major-dcds">Major Defensive Cooldowns</h3>
+                <p>As a sorc, you have three (two and a half, really) defensive
+                    cooldowns that will help you out of big trouble. These are
+                    <span class="sprite sprite-phase-walk">Phase Walk</span>,
+                    <span class="sprite sprite-force-barrier">Force Barrier</span>, and
+                    <span class="sprite sprite-unbreakable-will">Unbreakable Will</span>.
+                    The ideal cooldown rotation would have you use
+                    <span class="sprite sprite-phase-walk">Phase Walk</span>
+                    the first time you are stunned,
+                    <span class="sprite sprite-unbreakable-will">Unbreakable Will</span>
+                    some time later if you are caught up to and stunned again, and
+                    <span class="sprite sprite-force-barrier">Force Barrier</span>
+                    on whitebar if you are restunned after that. This is ideal, but
+                    not always possible, so at minimum make sure to use all three of
+                    these before you die. Major cooldowns are really only necessary
+                    when you are caught in a stun (or a very nasty root), however,
+                    so when you are un-stunned you should be using
+                    <span class="sprite sprite-force-speed">Force Speed</span>
+                    to position yourself so that you take the minimum possible damage.
+                    This process is called kiting, and we will cover it in the next
+                    section.
+                </p>
+                <h3>Damage Reduction</h3>
                 <p>This section hasn&apos;t been written yet.</p>
                 <h3>Kiting</h3>
+                <p>This section hasn&apos;t been written yet.</p>
                 <p>If there are multiple people
                     chasing you, you always want to be hitting the closest one in
                     order to slow them down, but know that in this situation it is
