Additions to lightning defense section

--- a/lightning.html
+++ b/lightning.html
@@ -290,6 +290,135 @@
                     goddamn truck, and after that you can find creative uses for it the
                     second time it comes up. Push this button off cooldown while
                     freecasting.</p>
+                <h3 id="target-selection">Target Selection</h3>
+                <p>As an arena player, your first target should obviously be any
+                    that comes in egregiously unprepared and doesn&apos;t pop their
+                    defensive cooldowns properly. However, barring a situation like
+                    that, it&apos;s useful to know which classes are easiest for you
+                    to hit in this spec. These will be as follows:
+                    <ol>
+                        <li><strong>Snipers.</strong>
+                            Already in 6.0 Lightning Sorcs could destroy
+                            snipers through pretty much all of their cooldowns, and
+                            in 7.0 the only thing that&apos;s changed is that they
+                            have fewer of them. Watch for rolls and avoid hitting your
+                            major burst into them, but otherwise a sniper is basically
+                            a parse dummy with no ability to recover its health (as
+                            long as you remember to chase phase walk, that is.)</li>
+                        <li><strong>Mercenaries.</strong>
+                            Mercs don&apos;t actually have bad defensives,
+                            but the damage toolkit you get as Lightning is essentially
+                            a hard counter to their best protections. Since
+                            <span class="sprite sprite-chain-lightning">Chain Lightning</span> / <span class="sprite sprite-halted-offensive">Halted Offensive</span>
+                            is counted as AOE (area of effect) damage by the game&apos;s
+                            internal mechanisms, it can be hit through a merc&apos;s
+                            reflect for the full damage, and without healing the merc.
+                            It also will not give the merc healing stacks on Energy
+                            Shield. The ideal combination to hit through either of
+                            these cooldowns is a hardcasted
+                            <span class="sprite sprite-chain-lightning">Chain Lightning</span> / <span class="sprite sprite-halted-offensive">Halted Offensive</span>,
+                            followed by a full
+                            <span class="sprite sprite-force-storm">Force Storm</span>,
+                            followed by another
+                            <span class="sprite sprite-chain-lightning">Chain Lightning</span> / <span class="sprite sprite-halted-offensive">Halted Offensive</span>.
+                            You can also apply
+                            <span class="sprite sprite-polarity-shift">Polarity Shift</span>
+                            to the entire combination, and
+                            <span class="sprite sprite-recklessness">Recklessness</span>
+                            after the hardcast in order to cause additional devastation.
+                            After this combo you can go into casting
+                            <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                            since at this point the DCD will be over by the time the
+                            cast finishes. The ideal situation to surprise a merc in
+                            this way is to hold your offensive cooldowns (or even wait
+                            to open) until they have popped reflect, and then use the
+                            combination above to drop them at least 200k HP through it.
+                            Kolto Overload, on the other hand, cannot be easily
+                            counterplayed unless the merc pops it at too low of a
+                            health percentage, so it&apos;s generally best to swap
+                            targets when it is popped (only for the 8 seconds though).</li>
+                        <li><strong>Concealment Operatives</strong>
+                            (note: make sure you know their
+                            spec.) The root profile of Lightning&apos;s attacks is
+                            ideal for making a conc op&apos;s life hell. When hitting
+                            a conc op, make sure to delay your GCD a bit (like 0.1s)
+                            in order to determine whether they will spend their GCD
+                            on a roll (which will resist whatever you use), and then
+                            if and only if they use it on something else (like an
+                            attack of their own, or a kolto probe), use offensive
+                            abilities on them. If they roll, you can use a heal on
+                            yourself or a teammate to pass the empty GCD, or
+                            <span class="sprite sprite-consuming-darkness">Consuming Darkness</span>
+                            to regenerate some force (only if you are low on it.)
+                            Ensure that you keep the operative rooted with
+                            <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                            and
+                            <span class="sprite sprite-overload">Overload</span>
+                            so that you can use casted attacks on them. Generally you
+                            will want to start with Thundering Blast because its
+                            cooldown is shorter, and re-root with Overload if the
+                            operative purges the effect via Evasion or Holotraverse.
+                            If the operative breaks the second root, you can apply a
+                            third whenever your
+                            <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                            comes off cooldown, and then have your way with the
+                            operative. It is also fairly safe to stun an operative
+                            while they are rooted, as they cannot roll it. To maximize
+                            control, I recommend using one casted attack while the
+                            operative is rooted, and following it with
+                            <span class="sprite sprite-electrocute">Electrocute</span>
+                            and 3 more hard-hitting attacks. See the "Locking Down"
+                            section below for one very effective way to chain your
+                            controlling effects (of several possible).</li>
+                        <li><strong>Powertechs.</strong>
+                            PT defensives are almost entirely armor-based,
+                            which means that you as a Lightning Sorc barely care about
+                            them at all. If the powertech pops Emergency Power (the
+                            glowing white bubble around themselves), treat it like an
+                            operative rolling for 2 GCDs (ignore them, do something
+                            else that&apos;s useful), and then go back to dumpstering.
+                            If they pop Kolto Overload at high health, they will most
+                            likely live through it, so you should swap targets for 8
+                            seconds. If they pop it at low (sub-20%) health, you can
+                            definitely kill them through it if your team has eyes, so
+                            full speed ahead. Killing a powertech is slow, but you
+                            will almost always succeed. PTs are much more of a
+                            defensive than an offensive problem.</li>
+                        <li><strong>Juggernauts.</strong>
+                            Juggs are like PTs but with more healing and
+                            less potential to kill anything. You <em>can</em> go them
+                            and much like PTs they will eventually die, but normally
+                            your team will kill them anyway and it&apos;s more useful
+                            to use your damage profile on something that&apos;s a
+                            bigger threat. That said, if your teammates are ignoring
+                            a jugg that&apos;s low or has spend DCDs, certainly don&apos;t
+                            just let it heal.
+                        </li>
+                        <li><strong>Assassins.</strong>
+                            Killing sins takes forever. They have three
+                            health bars and normally will hide in stealth until getting
+                            a fourth. However, they are such an offensive threat that
+                            normally it is actually advantageous to sacrifice that
+                            damage in order to take them off the playing field. It
+                            can be equally useful to just peel them off when they
+                            first come out of stealth and deny their autocrit window,
+                            however, without wasting damage on them (which they will
+                            just heal).</li>
+                        <li><strong>Marauders.</strong>
+                            Killing maras is a nightmare for your damage
+                            profile. They have great ways to reduce and negate the
+                            types of damage sorcs deal, and will most likely attempt
+                            a regen once they are finally low as well. You must chase
+                            and deny them this regen or your odds of winning the round
+                            plummet. Arena teammates almost never assist with chasing,
+                            so this can be a brutalizing exercise since marauders are
+                            a faster class than sorcs. It can be done with enough
+                            persistence, however.</li>
+                        <li><strong>Lethality Operatives.</strong>
+                            Don&apos;t waste your damage, they
+                            will just heal through all of it.</li>
+                    </ol>
+                </p>
                 <h3 id="chasing">Chasing</h3>
                 <p>When you start investing damage into a target, it&apos;s incredibly
                     important that you do not then allow this target to escape and
@@ -360,8 +489,33 @@
             <hr />
             <section id="defense">
                 <h2>Defense</h2>
+                <p>If you&apos;ve ever watched very good sorcs like
+                    <a href="https://www.youtube.com/watch?v=9u9OEtQPkWY">Durmoth</a>
+                    and
+                    <a href="https://www.youtube.com/watch?v=wZvA4knb12M">Lyala</a>
+                    play in 5.0 and 6.0, you will notice they play with a very
+                    peculiar style&mdash;they play slowly, tactically, control their
+                    opponents extensively, use line-of-sight objects to minimize
+                    incoming damage, and only expose themselves to fire when their
+                    targets are particularly vulerable, having no defensive cooldowns
+                    active. This is the prototypical way to play a sorcerer. You have
+                    no particularly notable defensive cooldowns of your own, only
+                    repositioning tools and stun breakers, so you must play
+                    intelligently and leverage your positioning and your ability to
+                    move while not stunned in order to outplay the DCDs of your
+                    opponents. In 6.0 this playstyle was essentially optional. It was
+                    advantageous, but you could fare pretty well just pretending to be
+                    a marauder and charging in nose-first. In 7.0, if you wish to play
+                    Lightning, it is absolutely mandatory. Your positioning is critical
+                    because your ability to regenerate health is extremely limited, so
+                    taking unnecessary damage can cripple you for the remainder of the
+                    round. Likewise, since your health and force pool is so limited,
+                    when opportunities to break combat and regenerate them with
+                    <span class="sprite sprite-seethe">Seethe</span>
+                    present themselves, they are invaluable.
+                </p>
                 <h3 id="unnatural-pres"><span class="sprite sprite-unnatural-preservation">Unnatural Preservation</span></h3>
-                <p>Before we even get into the macro-gameplay of surviving on sorc,
+                <p>Before we even get into the macro-gameplay of sorc defensives,
                     let me introduce you to my number one pet peeve when watching other
                     sorcs play. This is my friend
                     <span class="sprite sprite-unnatural-preservation">Unnatural Preservation</span>.
