--- a/lightning.html
+++ b/lightning.html
@@ -553,17 +553,258 @@
                     This process is called kiting, and we will cover it in the next
                     section.
                 </p>
+                <h3 id="kiting">Kiting</h3>
+                <p>Your primary defensive strategy on sorc is the art of positioning
+                    yourself in such a way that you take as little damage as possible
+                    from enemy players. This art is called kiting. In some instances,
+                    kiting is very simple. A concealment operative cannot do damage to
+                    you if he cannot come within 4 meters of you. Therefore, stay out
+                    of that range most of the time and you are safe. Likewise, an
+                    arsenal merc can do very little damage to you if he cannot see
+                    you through a wall. Therefore, put an object between you and the
+                    merc and you should be alright. These are the basic premises for
+                    kiting melee and ranged classes&mdash;against melee classes, you
+                    want to place a lot of distance between you and the enemy. Against
+                    ranged classes, you want to place an object between you and the
+                    enemy.</p>
+                <h4>Mixed Comps</h4>
+                <p>In situations where the enemy team is a mixed composition of
+                    melee and ranged classes, however, the issue becomes much
+                    more complicated. Ideally, you want to place both distance, and
+                    an LOS object between yourself and the enemy. Generally the way
+                    to do this is to time your usage of
+                    <span class="sprite sprite-force-speed">Force Speed</span>
+                    such that you can use it to run away, and then turn a corner of
+                    some kind. Some maps are great for this, and others are abysmal.
+                    In the latter case, you will have to use some creativity in
+                    tandem with the strategies described below in order to escape
+                    a tricky situation where you would take unnecessary damage.</p>
+                <h4>Baiting Knockbacks</h4>
+                <p>One of the greatest ways to juke a team of bad players is to
+                    bait them into being knocked off a ledge they can&apos;t easily
+                    climb again. The way to execute this is generally to use
+                    <span class="sprite sprite-force-speed">Force Speed</span>
+                    to take you to a place on the edge of a ledge, and then turn your
+                    camera and quickly use
+                    <span class="sprite sprite-overload">Overload</span>
+                    on the group of enemies that follows. Excellent spots for this
+                    include the vent landing area on Mandalorian Battle Ring, the
+                    ramps on Orbital Station, and the hut doorways overlooking the pit
+                    on Tatooine Canyon.</p> 
+                <h4>Grouping Enemies</h4>
+                <p>If there are multiple players chasing you, you always want to be
+                    hitting the closest one in order to slow it down, and keep the
+                    enemies in a nice neat clump. Clumps allow you to use knockbacks,
+                    crowd control, or even the AOE slow from your
+                    <span class="sprite sprite-chain-lightning">Chain Lightning</span>
+                    on multiple targets at once, multiplying their effectiveness.</p>
+                <h4>Crowd Control</h4>
+                <p>Speaking of which, another great set of tools to ditch chasers are
+                    crowd control effects. Since we&apos;ve lost Whirlwind with the
+                    launch of 7.0, a sorc&apos;s CC kit essentially consists of
+                    <span class="sprite sprite-electrocute">Electrocute</span>
+                    and Seismic Grenades, which you can buy from the GTN. Electrocute
+                    should generally be used when there is a single leading chaser
+                    catching up to you in order to keep him in line with the pack,
+                    while Seismic Grenades can be used to incapacitate the entire pack
+                    at once while you make a getaway. However, if a player instantly
+                    breaks your Electrocute stun, you can immediately follow it with
+                    a Seismic Grenade knowing they will then have to sit for its
+                    entire duration, and you can use this time to create distance or
+                    heal yourself (the former is recommended).</p>
+                <h4>Phase Walk Usage</h4>
+                <p>While the rest of these tools are alright,
+                    <span class="sprite sprite-phase-walk">Phase Walk</span>
+                    is by far the best defensive ability sorcerers have. Since its
+                    cooldown is the shortest of our major DCDs, we would prefer to
+                    use it first in order to get a second one off before dying, and
+                    in order to do that we need to have it in a solid position before
+                    we ever head into combat. This means we cannot sit in spawn like
+                    juggernauts or powertechs like to, as being caught without phase
+                    walk set is a death sentence.</p>
+                <p>When starting off a round as the kill target, the ideal opening is
+                    to set Phase Walk at a high altitude, drop to a lower level, have
+                    the enemy team follow you down, and then activate Phase Walk and
+                    leave them sitting on the bottom floor like idiots, wasting their
+                    entire opening volley of damage (which usually is more than they
+                    will do for the rest of the match). This late into the game&apos;s
+                    life-cycle, however, people are beginning to get wise to Phase
+                    Walk strategies, so after activating it you are likely to be
+                    chased. For this reason, ideal Phase Walk spots are both at high
+                    altitude, and allow you to escape in multiple directions depending
+                    which the enemy team tries to chase you from. From here you can
+                    just run farther away and preserve the distance you have created
+                    until you drop combat and can use
+                    <span class="sprite sprite-seethe">Seethe</span>
+                    to heal to full. This is an ideal situation and will not be
+                    possible every time, but at least try to leave yourself room to
+                    run away from your phase in the event it gets camped or chased.
+                    TL;DR: don&apos;t Phase Walk into a corner, and don&apos;t Phase
+                    Walk where you can be leapt to. I leave the rest up to your
+                    imagination.</p>
+                <h4>Self-Healing</h4>
+                <p>As a Lightning Sorc you have several way to heal yourself apart
+                    from the aforementioned
+                    <span class="sprite sprite-unnatural-preservation">Unnatural Preservation</span>,
+                    however, neither is very effective on its own. On one hand,
+                    <span class="sprite sprite-resurgence">Resurgence</span> will heal
+                    you for a pretty pitiful amount of health, but it can be used on
+                    the move and the small amount does add up, so it&apos;s worth
+                    using when you don&apos;t have anything better to do. Similarly,
+                    <span class="sprite sprite-dark-heal">Dark Heal</span> will heal
+                    you for a slightly less, but still, pitiful amount of health, but
+                    must be casted and costs an absolute dick ton of force. I honestly
+                    do not recommend stopping to cast this unless no one is following
+                    you. On the surface, the options seem a little bleak, and they
+                    are.</p>
+                <p>Fortunately, in 7.1, Lightning received a bit of a saving grace in
+                    the form of a passive which makes our
+                    <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                    proc
+                    <span class="sprite sprite-dark-heal">Dark Heal</span>,
+                    making it heal for 30% more and activate instantly. This means if
+                    you are rooting people properly, you should have these banked up
+                    in order to help you recover from any mistakes you might make in
+                    terms of avoiding damage. (Note: it is still not enough to attempt
+                    to sit in the thick of things and face-tank, though.)</p>
+                <h4>Force Management</h4>
+                <p>Now, spamming dark heal procs of course raises the issue that it
+                    completely annihilates your force. There are two ways to manage
+                    this, and most people will do a combination of both. The first is
+                    to be extremely religious about avoiding damage, this minimizing
+                    the need to heal and maximizing the frequency of combat drops,
+                    allowing you to regenerate force with
+                    <span class="sprite sprite-seethe">Seethe</span>.
+                    This requries a great deal of experience and skill to pull off,
+                    however, and also generally relies on your opponent(s) being
+                    somewhat garbage.</p>
+                <p>The second strategy is much simpler&mdash;while you are running
+                    away and don&apos;t have other instant-cast abilities to use,
+                    spam
+                    <span class="sprite sprite-consuming-darkness">Consuming Darkness</span>
+                    a bunch of times to give you force back. It isn&apos;t the
+                    cleanest solution, but it will save your life and improve your
+                    winrate, so you may as well do it.</p>
+                <h4>General Positioning</h4>
+                <p>In addition to active kiting, it is also important as a sorc to be
+                    prepared to begin kiting at any second. Being caught out of
+                    position (meaning out of range of your Phase Walk or away from
+                    any objects you could use to break line-of-sight) can quickly get
+                    you killed, or at best force you to spend your defensive cooldowns
+                    in an order that greatly reduces your lifespan. Therefore,
+                    positioning responsibly while you play sorc entails knowing your
+                    Phase Walk range, moving your Phase Walk if you need to chase
+                    out of that range, and always staying near an object you can use
+                    to break casts and channels targeting you (unless you are in the
+                    middle of
+                    <span class="sprite sprite-force-speed">Force Speed</span>).</p>
                 <h3>Damage Reduction</h3>
-                <p>This section hasn&apos;t been written yet.</p>
-                <h3>Kiting</h3>
-                <p>This section hasn&apos;t been written yet.</p>
-                <p>If there are multiple people
-                    chasing you, you always want to be hitting the closest one in
-                    order to slow them down, but know that in this situation it is
-                    only a matter of time before you die, and plan accordingly to
-                    extract breakers, defensive cooldowns, et cetera from the people
-                    chasing you.</p>
+                <p>At difference to the other sorc specs, Lightning in particular
+                    has a fair bit of passive damage reduction which you can use to
+                    soften incoming attacks if you maintain it properly. In 6.0 and
+                    7.0, damage reduction is always much less important than damage
+                    avoidance, as you will be hit for more damage by exposing yourself
+                    than you will be able to reduce, but if you are able to have both
+                    then you should do so.</p>
+                <p>Lightning has three sources of passive DR:
+                    <ul>
+                        <li>Activating
+                            <span class="sprite sprite-lightning-bolt">Lightning Bolt</span>
+                            will grant stacks of 5% damage reduction, up to 3.</li>
+                        <li>Activating
+                            <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                            will grant one more stack of 5% damage reduction.</li>
+                        <li>Utilizing
+                            <span class="sprite sprite-static-barrier">Static Barrier</span>
+                            on cooldown will grant a final stack of 5% damage reduction.
+                            Static Barrier also absorbs a bit of damage, so you should
+                            make it a habit to use this whenever it is available, like
+                            <span class="sprite sprite-unnatural-preservation">Unnatural Preservation</span>.
+                        </li>
+                    </ul>
+                    The easiest way to maintain this DR is by using 3
+                    <span class="sprite sprite-lightning-bolt">Lightning Bolts</span>
+                    in the opener, and then another each time that it is procced by
+                    the <strong>Subversion</strong> passive (it will glow gold).
+                </p>
+                <p>In addition to its passive DR, which should be active at all times,
+                    the builds I have recommended have access to active DR every 45
+                    seconds by way of
+                    <span class="sprite sprite-cloud-mind">Cloud Mind</span>.
+                    Cloud Mind grants 25% additional damage reduction for 6 seconds,
+                    and should be used when you anticipate big incoming burst damage.
+                    This is an intuition you will develop as you play, but a good rule
+                    of thumb is that when you are slowed, snared, or rooted (i.e.
+                    it&apos;s hard for your character to move), big damage is on the
+                    way shortly.</p>
+                <h3>Surviving Net</h3>
+                <p>Many new sorcs think they have everything figured out and then
+                    suddenly find all their major DCDs grayed out and themselves
+                    globaled. This is the result of an ability that Mercenaries have
+                    called <strong>Electro Net</strong>. Electro Net lasts 9 seconds,
+                    deals a great deal of damage over time, and disables
+                    <span class="sprite sprite-force-speed">Force Speed</span>,
+                    <span class="sprite sprite-phase-walk">Phase Walk</span>, and
+                    <span class="sprite sprite-force-barrier">Force Barrier</span>.
+                    It can be dispelled by using
+                    <span class="sprite sprite-unbreakable-will">Unbreakable Will</span>,
+                    but you will have to save your breaker for this purpose. The ideal
+                    maneuver when dispelling net in this way is to then Force Speed to a
+                    safe location and heal through the dot damage.</p>
+                <p>An alternative strategy is to try and tank the net without using
+                    breaker by stepping behind the line-of-sight object that you
+                    should have handy, and using all your heals and damage reductions
+                    at once. It will generally also require stunning or CCing one or
+                    more of the players attacking you during this time to pull off as
+                    well. I do not recommend this strategy to new players, especially
+                    because in this spec your ability to regenerate those resources
+                    is extremely limited, but you should be aware of the possibility
+                    in case of emergency.
+                </p>
+                <h3>Playing With Supports</h3>
+                <p>Finally, having support roles on your team will change the way in
+                    which you kite. Since the supports need to be able to guard or
+                    heal you, you will need to stay within their effective range in
+                    order for this to work, which quite a small arena to play in.
+                    Therefore, we will need to make some adjustments to our kiting
+                    style.</p>
+                <h4>Kiting With Tanks</h4>
+                <p>With a tank on your team, you should play as if the enemy team is
+                    entirely ranged (regardless of what it actually is). Guard does
+                    not require line of sight to function, and thus you should make
+                    yourself impossible to catch by playing ring-around-the-rosy with
+                    an object an applying slows to the players chasing you in order
+                    to slow down the incoming damage.</p>
+                <h4>Kiting With Healers (or Both)</h4>
+                <p>Healing, on the other hand, does require line of sight on the
+                    target, so when you have a healer you should (almost always) play
+                    entirely in the open field. In order to mitigate melee damage you
+                    will still be running away, but this time do so in a circle so
+                    that you never actually end up too far from your healer to be
+                    healed (or break his casts with line of sight objects). The
+                    diameter of said circle should be about 20 meters.</p>
+                <p>There are two exceptions to this rules, those being:
+                    <ol>
+                        <li>If the enemy team is entirely ranged, play is if you had
+                            a tank instead of a healer. You will mitigate more damage
+                            in this way than you will healing, although a bad healer
+                            will rage at you and probably cause a loss in this case.
+                            Which brings us to&hellip;</li>
+                        <li>If your healer is shit, play as if you do not have one
+                            (that is, if there&apos;s a tank, play it like tank games,
+                            and if there isn&apos;t a tank, play it like all-DPS games.)</li>
+                    </ol>
+                </p>
             </section>
+            <hr />
+            <footer>
+                <h2>Thanks for Reading</h2>
+                <p>That&apos;s about all I have for now, I may add a dueling section
+                    or something later. Hopefully you enjoyed reading and if you have
+                    criticisms or things I missed that you want to know about, contact
+                    me by one of the ways listed on the <a href="/">home page</a>.
+                </p>
+            </footer>
         </div>
     </body>
 </html>
