Some little edits

--- a/lightning.html
+++ b/lightning.html
@@ -529,7 +529,10 @@
                     and also causing me to despise you on a personal level. In short,
                     if you are below 90% health,
                     <strong>PUSH THIS FUCKING BUTTON IMMEDIATELY</strong>.
-                    Now, with that said&hellip;
+                    While we&apos;re at it, do the same thing with
+                    <span class="sprite sprite-static-barrier">Static Barrier</span>,
+                    even if you&apos;re at 100%. It&apos;s a shield so it can&apos;t
+                    over-heal.
                 </p>
                 <h3 id="major-dcds">Major Defensive Cooldowns</h3>
                 <p>As a sorc, you have three (two and a half, really) defensive
@@ -623,7 +626,7 @@
                     juggernauts or powertechs like to, as being caught without phase
                     walk set is a death sentence.</p>
                 <p>When starting off a round as the kill target, the ideal opening is
-                    to set Phase Walk at a high altitude, drop to a lower level, have
+                    to set Phase Walk at a high level, drop to a lower level, have
                     the enemy team follow you down, and then activate Phase Walk and
                     leave them sitting on the bottom floor like idiots, wasting their
                     entire opening volley of damage (which usually is more than they
@@ -633,13 +636,13 @@
                     chased. For this reason, ideal Phase Walk spots are both at high
                     altitude, and allow you to escape in multiple directions depending
                     which the enemy team tries to chase you from. From here you can
-                    just run farther away and preserve the distance you have created
-                    until you drop combat and can use
+                    just run farther away and preserve the distance you&apos;ve created
+                    until you drop combat and can
                     <span class="sprite sprite-seethe">Seethe</span>
-                    to heal to full. This is an ideal situation and will not be
+                    yourself to full. This is an ideal situation and will not be
                     possible every time, but at least try to leave yourself room to
-                    run away from your phase in the event it gets camped or chased.
-                    TL;DR: don&apos;t Phase Walk into a corner, and don&apos;t Phase
+                    run away from your phase in the event it gets camped or chased.</p>
+                    <p><strong>TL;DR:</strong> Don&apos;t Phase Walk into a corner, and don&apos;t Phase
                     Walk where you can be leapt to. I leave the rest up to your
                     imagination.</p>
                 <h4>Self-Healing</h4>
