Some more lightning edits

--- a/lightning.html
+++ b/lightning.html
@@ -552,24 +552,22 @@
                     when you are caught in a stun (or a very nasty root), however,
                     so when you are un-stunned you should be using
                     <span class="sprite sprite-force-speed">Force Speed</span>
-                    to position yourself so that you take the minimum possible damage.
-                    This process is called kiting, and we will cover it in the next
-                    section.
+                    to repositioning yourself to safety.
                 </p>
                 <h3 id="kiting">Kiting</h3>
                 <p>Your primary defensive strategy on sorc is the art of positioning
                     yourself in such a way that you take as little damage as possible
                     from enemy players. This art is called kiting. In some instances,
-                    kiting is very simple. A concealment operative cannot do damage to
-                    you if he cannot come within 4 meters of you. Therefore, stay out
-                    of that range most of the time and you are safe. Likewise, an
-                    arsenal merc can do very little damage to you if he cannot see
-                    you through a wall. Therefore, put an object between you and the
-                    merc and you should be alright. These are the basic premises for
-                    kiting melee and ranged classes&mdash;against melee classes, you
-                    want to place a lot of distance between you and the enemy. Against
-                    ranged classes, you want to place an object between you and the
-                    enemy.</p>
+                    kiting is very simple. For example, a concealment operative cannot
+                    do damage to you if he cannot come within 4 meters of you.
+                    Therefore, stay out of that range most of the time and you are
+                    safe. Likewise, an arsenal merc can do very little damage to you
+                    if he cannot see you through a wall. Therefore, put an object
+                    between you and the merc and you should be alright. These are the
+                    basic premises for kiting melee and ranged classes&mdash;against
+                    melee compositions, you want to place a lot of distance between
+                    you and the enemy. Against ranged compositions, you want to place
+                    an object between you and the enemy.</p>
                 <h4>Mixed Comps</h4>
                 <p>In situations where the enemy team is a mixed composition of
                     melee and ranged classes, however, the issue becomes much
@@ -713,7 +711,7 @@
                     <ul>
                         <li>Activating
                             <span class="sprite sprite-lightning-bolt">Lightning Bolt</span>
-                            will grant stacks of 5% damage reduction, up to 3.</li>
+                            will grant stacks of 5% damage reduction, up to 15%.</li>
                         <li>Activating
                             <span class="sprite sprite-thundering-blast">Thundering Blast</span>
                             will grant one more stack of 5% damage reduction.</li>
@@ -725,10 +723,21 @@
                             <span class="sprite sprite-unnatural-preservation">Unnatural Preservation</span>.
                         </li>
                     </ul>
-                    The easiest way to maintain this DR is by using 3
+                    The easiest way to maintain this DR is by using the 3x
                     <span class="sprite sprite-lightning-bolt">Lightning Bolts</span>
-                    in the opener, and then another each time that it is procced by
-                    the <strong>Subversion</strong> passive (it will glow gold).
+                    procced by
+                    <span class="sprite sprite-force-speed">Force Speed</span>
+                    in the opener, and then another
+                    <span class="sprite sprite-lightning-bolt">Lightning Bolt</span>
+                    each time that
+                    <strong>Subversion</strong> is procced
+                    (<span class="sprite sprite-lightning-bolt">Lightning Bolt</span>
+                    will glow gold). The remainder of your <strong>Convection</strong>
+                    procs from
+                    <span class="sprite sprite-force-speed">Force Speed</span>
+                    should be spent on
+                    <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                    (which will also glow gold).
                 </p>
                 <p>In addition to its passive DR, which should be active at all times,
                     the builds I have recommended have access to active DR every 45
@@ -737,9 +746,9 @@
                     Cloud Mind grants 25% additional damage reduction for 6 seconds,
                     and should be used when you anticipate big incoming burst damage.
                     This is an intuition you will develop as you play, but a good rule
-                    of thumb is that when you are slowed, snared, or rooted (i.e.
-                    it&apos;s hard for your character to move), big damage is on the
-                    way shortly.</p>
+                    of thumb is that whenever you are snared or rooted (i.e. it&apos;s
+                    hard for your character to move), big damage is on the way
+                    shortly.</p>
                 <h3>Surviving Net</h3>
                 <p>Many new sorcs think they have everything figured out and then
                     suddenly find all their major DCDs grayed out and themselves
