Some final additions and revisions to the lightning guide

--- a/lightning.html
+++ b/lightning.html
@@ -699,6 +699,15 @@
                     to break casts and channels targeting you (unless you are in the
                     middle of
                     <span class="sprite sprite-force-speed">Force Speed</span>).</p>
+                <h4>Pole-Knocking</h4>
+                <p>One last trick which can be very helpful is what I call
+                    pole-knocking, that is, getting around a pole, and then doubling
+                    back to knock away an enemy that tries to follow. This is a very
+                    specific technique but its potential is high, so here is a video
+                    to demonstrate me doing it to a jugg.</p>
+                <div class="multiplex">
+                    <iframe class="video mux-frame" src="https://www.youtube.com/embed/u2LC1prnqs8?start=380" allowfullscreen></iframe>
+                </div>
                 <h3>Damage Reduction</h3>
                 <p>At difference to the other sorc specs, Lightning in particular
                     has a fair bit of passive damage reduction which you can use to
@@ -766,13 +775,14 @@
                 <p>An alternative strategy is to try and tank the net without using
                     breaker by stepping behind the line-of-sight object that you
                     should have handy, and using all your heals and damage reductions
-                    at once. It will generally also require stunning or CCing one or
-                    more of the players attacking you during this time to pull off as
-                    well. I do not recommend this strategy to new players, especially
-                    because in this spec your ability to regenerate those resources
-                    is extremely limited, but you should be aware of the possibility
-                    in case of emergency.
-                </p>
+                    at once. It will generally also require stunning, CCing, or
+                    pole-knocking one or more of the players attacking you during this
+                    time to pull off as well. I do not recommend this strategy to new
+                    players, especially because in this spec your ability to
+                    regenerate those resources is extremely limited, but you should be
+                    aware of the possibility in case of emergency (or multiple nets).
+                    If there are multiple nets you should try to tank the first one
+                    so you can break the second.</p>
                 <h3>Playing With Supports</h3>
                 <p>Finally, having support roles on your team will change the way in
                     which you kite. Since the supports need to be able to guard or
@@ -807,6 +817,35 @@
                             and if there isn&apos;t a tank, play it like all-DPS games.)</li>
                     </ol>
                 </p>
+                <h3>Playing Around DCDs</h3>
+                <p>I&apos;ve touched on this briefly before, but it is important, so
+                    let&apos;s cover it again. As an arena player of any kind, it&apos;s
+                    advantageous to only expose yourself to damage when you can do
+                    something productive. That is to say, hide behind a wall or an
+                    object when a player pops major defensive cooldowns. There are two
+                    ways to play this, depending if you are taking damage or not. If
+                    you are taking damage, which you most likely will when you are new,
+                    it&apos;s helpful to time your escapes (your
+                    <span class="sprite sprite-phase-walk">Phase Walk</span> and
+                    <span class="sprite sprite-force-barrier">Force Barrier</span>)
+                    with major enemy DCDs, like a merc or PT&apos;s Kolto Overload, or
+                    a marauder&apos;s Undying Rage. This way, your target can&apos;t
+                    get free damage on you without taking any themselves. It also
+                    makes it so that if they spend time chasing you, they essentially
+                    kite out their own DCD, which is also advantageous for your team.</p>
+                <p>The second situation to consider is when your target pops a major
+                    defensive cooldown, and you are not the target (this is called
+                    freecasting). In this instance, you should just swap to the
+                    second target until the first target&apos;s DCD expires in order
+                    to avoid wasting damage. As Lightning target swapping barely
+                    impacts your damage as long as you swap back in time to refresh
+                    <span class="sprite sprite-affliction">Affliction</span>
+                    on the first target, which you can do with
+                    <span class="sprite sprite-chain-lightning">Chain Lightning</span> / <span class="sprite sprite-halted-offensive">Halted Offensive</span>
+                    (instant) or
+                    <span class="sprite sprite-crushing-darkness">Crushing Darkness</span>
+                    (casted).
+                </p>
             </section>
             <hr />
             <footer>
@@ -816,6 +855,17 @@
                     criticisms or things I missed that you want to know about, contact
                     me by one of the ways listed on the <a href="/">home page</a>.
                 </p>
+                <h3>Helpful Links and Videos</h3>
+                <p>Here are some videos you may consider watching to help out your
+                    sorc gameplay.</p>
+                <ul>
+                    <li>Durmoth&apos;s <a href="https://www.youtube.com/watch?v=9u9OEtQPkWY">The Rise of a Peasant</a></li>
+                    <li>Lyala&apos;s <a href="https://www.youtube.com/watch?v=wZvA4knb12M">Sorc vs Merc Duel with Alim</a></li>
+                    <li>Lyala&apos;s <a href="https://www.youtube.com/watch?v=rz-6F4Cm3Zk">Unstoppable</a> (Kiting Video)</li>
+                    <li>Maltoxic&apos;s <a href="https://www.youtube.com/watch?v=p1QmwiyiQzI">Lightning Sorc 2v3</a></li>
+                    <li>My <a href="https://www.youtube.com/watch?v=u2LC1prnqs8">Return of Spanish Nat</a> (embedded above)</li>
+                    <li>Whatever other random shit I decide to post on <a href="https://www.youtube.com/@natalyyh">my youtube</a>.</li>
+                </ul>
             </footer>
         </div>
     </body>
